fixed almost all bugs and finished program to an extend